welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:14: error: type mismatch;
 found   : String
 required: Int
      for (i <- 1 to litMessage()) avance();
                               ^